# ServerChatApp

./: CMakeLists.txt  Cryptograph.cpp  Cryptograph.h  Helpers.cpp  Helpers.h  JsonReader.cpp  JsonReader.h  Navigator.cpp  Navigator.h  json.hpp  main.cpp
controllers/: AuthController.cpp  AuthController.h  ContactsController.cpp  ContactsController.h  GroupsController.cpp  GroupsController.h  MessageController.cpp  MessageController.h  RequestsController.cpp  RequestsController.h  UserController.cpp  UserController.h
database/: contact_requests.json  contacts.json  group_users.json  groups.json  messages.json  users.json
models/: Contact.cpp  Contact.h  Group.cpp  Group.h  GroupUser.cpp  GroupUser.h  Message.cpp  Message.h  Model.cpp  Model.h  User.cpp  User.h
providers/: ActiveUsersProvider.cpp  ActiveUsersProvider.h
